# scip-ocaml

./: .gitignore  .ocamlformat  README.md  dune-project  scip_ocaml.opam  scip_ocaml.opam.locked
lib/: ScipSymbol.ml  dune  scip.ml  scip_loc.ml  scip_pb.ml  scip_pb.mli  scip_pp.ml  scip_pp.mli  scip_snapshot.ml  scip_symbol.ml  scip_symbol.mli  scip_types.ml  scip_types.mli  symbol_iter.ml  ttype_utils.ml
lib/proto/: dune
lib/snapshots/input/simple_module/: dune  simple_module.ml
lib/snapshots/input/single_function/: dune  snapshot_single_function.ml
lib/snapshots/output/: simple_module.ml  snapshot_single_function.ml
lib/tasty/: default.ml  dune  emit.ml  symbols.ml
lib/tests/: dune  test_snapshots.ml  test_symbols.ml
lib/types/: DocumentSymbols.ml  IndexSymbols.ml  ScipDescriptor.ml  ScipLoc.ml  ScipRange.ml  ScipSymbol.mli  SymbolRoles.ml  dune
test/: dune
test/single_function.t/: dune  run.t
