(library
 (name scip_ocaml)
 (libraries
  scip_proto
  scip_mods
  tasty
  ocaml-protoc
  base
  fmt
  fpath
  bos
  merlin-lib.ocaml_parsing
  compiler-libs.common)
 (preprocess (pps ppx_base))
 (flags
  (:standard -w -11 -open Base)))

(data_only_dirs snapshots)

(rule
 (alias update-snapshots)
 (action
  (progn
   (run dune build -f --root=/home/tjdevries/sourcegraph/scip_ocaml/lib/snapshots/input/single_function)
   (run scip-ocaml snapshot-dir /home/tjdevries/sourcegraph/scip_ocaml/lib/snapshots/ --mode=promote))))

(rule
 (alias check-snapshots)
 (action
  (progn
   (run dune build -f --root=/home/tjdevries/sourcegraph/scip_ocaml/lib/snapshots/input/single_function)
   (run scip-ocaml snapshot-dir /home/tjdevries/sourcegraph/scip_ocaml/lib/snapshots/ --mode=diff))))
